// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`POST /api/inspect (per-directory) > inspects fastapi-simple/ — detects python-fastapi 1`] = `
[
  {
    "configuration": {
      "$schema": "https://cdn.posit.co/publisher/schemas/posit-publishing-schema-v3.json",
      "comments": [
        " Configuration file generated by Posit Publisher.",
        " Please review and modify as needed. See the documentation for more options:",
        " https://github.com/posit-dev/publisher/blob/main/docs/configuration.md",
      ],
      "entrypoint": "app.py",
      "files": [
        "/app.py",
        "/requirements.txt",
      ],
      "python": {},
      "title": "fastapi-simple",
      "type": "python-fastapi",
      "validate": true,
    },
    "projectDir": "fastapi-simple",
  },
]
`;

exports[`POST /api/inspect (per-directory) > inspects jupyter-nb/ — detects as quarto-static (Quarto inspects .ipynb) 1`] = `
[
  {
    "configuration": {
      "$schema": "https://cdn.posit.co/publisher/schemas/posit-publishing-schema-v3.json",
      "alternatives": [
        {
          "$schema": "https://cdn.posit.co/publisher/schemas/posit-publishing-schema-v3.json",
          "entrypoint": "notebook.html",
          "files": [
            "/notebook.html",
          ],
          "source": "notebook.ipynb",
          "type": "html",
          "validate": true,
        },
      ],
      "comments": [
        " Configuration file generated by Posit Publisher.",
        " Please review and modify as needed. See the documentation for more options:",
        " https://github.com/posit-dev/publisher/blob/main/docs/configuration.md",
      ],
      "entrypoint": "notebook.ipynb",
      "files": [
        "/notebook.ipynb",
        "/requirements.txt",
      ],
      "python": {},
      "quarto": {
        "engines": [
          "jupyter",
        ],
        "version": "1.5.57",
      },
      "title": "jupyter-nb",
      "type": "quarto-static",
      "validate": true,
    },
    "projectDir": "jupyter-nb",
  },
  {
    "configuration": {
      "$schema": "https://cdn.posit.co/publisher/schemas/posit-publishing-schema-v3.json",
      "comments": [
        " Configuration file generated by Posit Publisher.",
        " Please review and modify as needed. See the documentation for more options:",
        " https://github.com/posit-dev/publisher/blob/main/docs/configuration.md",
      ],
      "entrypoint": "notebook.ipynb",
      "files": [
        "/notebook.ipynb",
        "/requirements.txt",
      ],
      "python": {},
      "title": "jupyter-nb",
      "type": "jupyter-notebook",
      "validate": true,
    },
    "projectDir": "jupyter-nb",
  },
]
`;

exports[`POST /api/inspect (per-directory) > inspects quarto-doc/ — detects quarto content 1`] = `
[
  {
    "configuration": {
      "$schema": "https://cdn.posit.co/publisher/schemas/posit-publishing-schema-v3.json",
      "alternatives": [
        {
          "$schema": "https://cdn.posit.co/publisher/schemas/posit-publishing-schema-v3.json",
          "entrypoint": "index.html",
          "files": [
            "/index.html",
          ],
          "source": "index.qmd",
          "title": "Quarto Document",
          "type": "html",
          "validate": true,
        },
      ],
      "comments": [
        " Configuration file generated by Posit Publisher.",
        " Please review and modify as needed. See the documentation for more options:",
        " https://github.com/posit-dev/publisher/blob/main/docs/configuration.md",
      ],
      "entrypoint": "index.qmd",
      "files": [
        "/index.qmd",
        "/_quarto.yml",
      ],
      "quarto": {
        "engines": [
          "markdown",
        ],
        "version": "1.5.57",
      },
      "title": "Quarto Document",
      "type": "quarto-static",
      "validate": true,
    },
    "projectDir": "quarto-doc",
  },
]
`;

exports[`POST /api/inspect (per-directory) > inspects rmd-static/ — detects as quarto-static (Quarto inspects .Rmd) 1`] = `
[
  {
    "configuration": {
      "$schema": "https://cdn.posit.co/publisher/schemas/posit-publishing-schema-v3.json",
      "alternatives": [
        {
          "$schema": "https://cdn.posit.co/publisher/schemas/posit-publishing-schema-v3.json",
          "entrypoint": "report.html",
          "files": [
            "/report.html",
          ],
          "source": "report.Rmd",
          "title": "Report",
          "type": "html",
          "validate": true,
        },
      ],
      "comments": [
        " Configuration file generated by Posit Publisher.",
        " Please review and modify as needed. See the documentation for more options:",
        " https://github.com/posit-dev/publisher/blob/main/docs/configuration.md",
      ],
      "entrypoint": "report.Rmd",
      "files": [
        "/report.Rmd",
      ],
      "quarto": {
        "engines": [
          "knitr",
        ],
        "version": "1.5.57",
      },
      "r": {},
      "title": "Report",
      "type": "quarto-static",
      "validate": true,
    },
    "projectDir": "rmd-static",
  },
  {
    "configuration": {
      "$schema": "https://cdn.posit.co/publisher/schemas/posit-publishing-schema-v3.json",
      "comments": [
        " Configuration file generated by Posit Publisher.",
        " Please review and modify as needed. See the documentation for more options:",
        " https://github.com/posit-dev/publisher/blob/main/docs/configuration.md",
      ],
      "entrypoint": "report.Rmd",
      "files": [
        "/report.Rmd",
      ],
      "r": {},
      "title": "Report",
      "type": "rmd",
      "validate": true,
    },
    "projectDir": "rmd-static",
  },
]
`;

exports[`POST /api/inspect (per-directory) > inspects shiny-python/ — detects python-shiny 1`] = `
[
  {
    "configuration": {
      "$schema": "https://cdn.posit.co/publisher/schemas/posit-publishing-schema-v3.json",
      "comments": [
        " Configuration file generated by Posit Publisher.",
        " Please review and modify as needed. See the documentation for more options:",
        " https://github.com/posit-dev/publisher/blob/main/docs/configuration.md",
      ],
      "entrypoint": "app.py",
      "files": [
        "/app.py",
        "/requirements.txt",
      ],
      "python": {},
      "title": "shiny-python",
      "type": "python-shiny",
      "validate": true,
    },
    "projectDir": "shiny-python",
  },
]
`;

exports[`POST /api/inspect (per-directory) > inspects static/ — detects html 1`] = `
[
  {
    "configuration": {
      "$schema": "https://cdn.posit.co/publisher/schemas/posit-publishing-schema-v3.json",
      "comments": [
        " Configuration file generated by Posit Publisher.",
        " Please review and modify as needed. See the documentation for more options:",
        " https://github.com/posit-dev/publisher/blob/main/docs/configuration.md",
      ],
      "entrypoint": "index.html",
      "files": [
        "/index.html",
      ],
      "title": "static",
      "type": "html",
      "validate": true,
    },
    "projectDir": "static",
  },
]
`;

exports[`POST /api/inspect (recursive) > inspects root workspace recursively — returns multiple content types 1`] = `
[
  {
    "configuration": {
      "$schema": "https://cdn.posit.co/publisher/schemas/posit-publishing-schema-v3.json",
      "comments": [
        " Configuration file generated by Posit Publisher.",
        " Please review and modify as needed. See the documentation for more options:",
        " https://github.com/posit-dev/publisher/blob/main/docs/configuration.md",
      ],
      "entrypoint": "app.py",
      "files": [
        "/app.py",
        "/requirements.txt",
      ],
      "python": {},
      "title": "fastapi-simple",
      "type": "python-fastapi",
      "validate": true,
    },
    "projectDir": "fastapi-simple",
  },
  {
    "configuration": {
      "$schema": "https://cdn.posit.co/publisher/schemas/posit-publishing-schema-v3.json",
      "alternatives": [
        {
          "$schema": "https://cdn.posit.co/publisher/schemas/posit-publishing-schema-v3.json",
          "entrypoint": "notebook.html",
          "files": [
            "/notebook.html",
          ],
          "source": "notebook.ipynb",
          "type": "html",
          "validate": true,
        },
      ],
      "comments": [
        " Configuration file generated by Posit Publisher.",
        " Please review and modify as needed. See the documentation for more options:",
        " https://github.com/posit-dev/publisher/blob/main/docs/configuration.md",
      ],
      "entrypoint": "notebook.ipynb",
      "files": [
        "/notebook.ipynb",
        "/requirements.txt",
      ],
      "python": {},
      "quarto": {
        "engines": [
          "jupyter",
        ],
        "version": "1.5.57",
      },
      "title": "jupyter-nb",
      "type": "quarto-static",
      "validate": true,
    },
    "projectDir": "jupyter-nb",
  },
  {
    "configuration": {
      "$schema": "https://cdn.posit.co/publisher/schemas/posit-publishing-schema-v3.json",
      "comments": [
        " Configuration file generated by Posit Publisher.",
        " Please review and modify as needed. See the documentation for more options:",
        " https://github.com/posit-dev/publisher/blob/main/docs/configuration.md",
      ],
      "entrypoint": "notebook.ipynb",
      "files": [
        "/notebook.ipynb",
        "/requirements.txt",
      ],
      "python": {},
      "title": "jupyter-nb",
      "type": "jupyter-notebook",
      "validate": true,
    },
    "projectDir": "jupyter-nb",
  },
  {
    "configuration": {
      "$schema": "https://cdn.posit.co/publisher/schemas/posit-publishing-schema-v3.json",
      "alternatives": [
        {
          "$schema": "https://cdn.posit.co/publisher/schemas/posit-publishing-schema-v3.json",
          "entrypoint": "index.html",
          "files": [
            "/index.html",
          ],
          "source": "index.qmd",
          "title": "Quarto Document",
          "type": "html",
          "validate": true,
        },
      ],
      "comments": [
        " Configuration file generated by Posit Publisher.",
        " Please review and modify as needed. See the documentation for more options:",
        " https://github.com/posit-dev/publisher/blob/main/docs/configuration.md",
      ],
      "entrypoint": "index.qmd",
      "files": [
        "/index.qmd",
        "/_quarto.yml",
      ],
      "quarto": {
        "engines": [
          "markdown",
        ],
        "version": "1.5.57",
      },
      "title": "Quarto Document",
      "type": "quarto-static",
      "validate": true,
    },
    "projectDir": "quarto-doc",
  },
  {
    "configuration": {
      "$schema": "https://cdn.posit.co/publisher/schemas/posit-publishing-schema-v3.json",
      "alternatives": [
        {
          "$schema": "https://cdn.posit.co/publisher/schemas/posit-publishing-schema-v3.json",
          "entrypoint": "report.html",
          "files": [
            "/report.html",
          ],
          "source": "report.Rmd",
          "title": "Report",
          "type": "html",
          "validate": true,
        },
      ],
      "comments": [
        " Configuration file generated by Posit Publisher.",
        " Please review and modify as needed. See the documentation for more options:",
        " https://github.com/posit-dev/publisher/blob/main/docs/configuration.md",
      ],
      "entrypoint": "report.Rmd",
      "files": [
        "/report.Rmd",
      ],
      "quarto": {
        "engines": [
          "knitr",
        ],
        "version": "1.5.57",
      },
      "r": {},
      "title": "Report",
      "type": "quarto-static",
      "validate": true,
    },
    "projectDir": "rmd-static",
  },
  {
    "configuration": {
      "$schema": "https://cdn.posit.co/publisher/schemas/posit-publishing-schema-v3.json",
      "comments": [
        " Configuration file generated by Posit Publisher.",
        " Please review and modify as needed. See the documentation for more options:",
        " https://github.com/posit-dev/publisher/blob/main/docs/configuration.md",
      ],
      "entrypoint": "report.Rmd",
      "files": [
        "/report.Rmd",
      ],
      "r": {},
      "title": "Report",
      "type": "rmd",
      "validate": true,
    },
    "projectDir": "rmd-static",
  },
  {
    "configuration": {
      "$schema": "https://cdn.posit.co/publisher/schemas/posit-publishing-schema-v3.json",
      "comments": [
        " Configuration file generated by Posit Publisher.",
        " Please review and modify as needed. See the documentation for more options:",
        " https://github.com/posit-dev/publisher/blob/main/docs/configuration.md",
      ],
      "entrypoint": "app.py",
      "files": [
        "/app.py",
        "/requirements.txt",
      ],
      "python": {},
      "title": "shiny-python",
      "type": "python-shiny",
      "validate": true,
    },
    "projectDir": "shiny-python",
  },
  {
    "configuration": {
      "$schema": "https://cdn.posit.co/publisher/schemas/posit-publishing-schema-v3.json",
      "comments": [
        " Configuration file generated by Posit Publisher.",
        " Please review and modify as needed. See the documentation for more options:",
        " https://github.com/posit-dev/publisher/blob/main/docs/configuration.md",
      ],
      "entrypoint": "index.html",
      "files": [
        "/index.html",
      ],
      "title": "static",
      "type": "html",
      "validate": true,
    },
    "projectDir": "static",
  },
]
`;
